# DeepLearning-Zero

./: .gitignore  CMakeLists.txt  DLZero  Makefile  README.md  main.cpp
NeuralNetwork/: ActivationFunction.hpp  NumCpp.hpp
